--- a/index-rtl.html
+++ b/index-rtl.html
@@ -44,7 +44,7 @@
     </div>
 </div>
 <!--Page Loader ends-->
-<div class="parallax-content">
+<div class="parallax-content">ddd
     <header>
     <section class="home-main" id="home">
         <h2 class="sr-only">This is home section</h2>
